fix(ctamessage): loadUnder should not go beyond scrollbars

--- a/src/components/Molecules/CtaMessage/CtaMessage.css
+++ b/src/components/Molecules/CtaMessage/CtaMessage.css
@@ -31,7 +31,7 @@
 
   position: fixed;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
 
   padding: 12px 42px;
   border-top: 2px solid orange;
